styles/larger.css
/* Define color variables */
:root {
    --primary-color: #26516A;
    --accent-color: rgba(248, 106, 54, 1);
    --text-color-light: ghostwhite;
    --text-color-dark: #333333;
    --background-color-light: #f4f4f4;
    --hover-background-color: rgba(255,255,255, 0.2);
    --active-background-color: rgba(0,0,0, 0.2);
    --border-color: steelblue;
    --shadow-color: gray;
    --dark-border-color: black;
}

/* Flex to display header contents horizontally as in a row, side by side */
header {
    color: var(--text-color-light);
    background-color: var(--primary-color);
    display: flex;
    align-items: center;
    padding: 1rem 2rem;
}

/* Set profile image size when in large or wide screen mode and other attributes */
header img {
    width: 225px; 
    height: auto;
    border: 3px solid var(--border-color); 
    box-shadow: 0 0 45px var(--shadow-color);
    margin-right: 2rem;
}

/* Large screen mode sets the cards in the main to display in grid mode with cards side by side
first card twice the size of the second card */
@media (min-width: 1100px) {
    .main {
        display: grid;
        grid-template-columns: 2fr 1fr;
        gap: 20px;
        padding: 0 60px; /* Padding on left and right */
    }

    /* Set the size and attributes of the h1 when in large mode */
    main h1 {
        font-size: 2.5rem;
        margin-left: 75px;
        margin-bottom: 20px;
        border-bottom: 1px solid var(--border-color); /* Add bottom border */
        padding-bottom: 10px; /* Add some space between the text and the border */
        width: calc(100% - 120px); /* Adjust width to match the padding in .main */
    }

    .card {
        margin-bottom: 0;
    }

    /* Set the size and attributes of the p footer when in large mode */
    footer p {
        color: var(--text-color-light); /* Set text color */
        font-size: 1.4rem;
        display: flex;
        justify-content: center;
        align-items: center;
        margin: 0;
        gap: 10px; /* Space between text and image */
    }
    
    /* Change or set the footer image (USA flag) when in large mode */
    footer img {
        width: 100px; /* Adjust the width as needed */
        height: auto; /* This ensures the height adjusts proportionally */
        margin-left: 10px; /* Optional: Add space between text and image */
    }
}

